NXP-10231: Display links as inline blocks, fix vertical-align and margins

--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/tabs_content.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/tabs_content.css
@@ -86,6 +86,8 @@ The sum of all the .gridBox in a .gridRow line must always be equal to 12 */
 .content_block td { padding-left: .5em; vertical-align: top }
 .content_block .labelColumn { width: 100px }
 .content_block .actionsColumn { text-align: right; vertical-align: top; width: 20% }
+.actionsColumn img, .actionsColumn a { display: inline-block; vertical-align: bottom }
+.actionsColumn .smallButton { margin: 0 .2em; padding: .2em 0 }
 .content_block img { padding: 0 .5em }
 
 .note_content_block { background-color: #fff;	border: 1px solid; border-color: "neutral.light (__FLAVOR__ border)"; border-radius: 3px; color: "black (__FLAVOR__ color)"; font-size: 115%; margin: 0 0 1.4em; padding: 1.4em 1.7em; text-align: justify }
